--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,173 +15,173 @@
     year = "2025"
 }
 
-@misc{a360,
-       author = "{{von der Linden}, Anja} and others",
-        title = "A Rubin view of Abell 360",
-         year = "2025, in prep."
-}
-
-
-@MISC{sitcom-128,
-       author = {{Adari}, Prakruth and {von der Linden}, Anja},
-        title = "{SITCOMTN-128: Unrecognized Blends in LSSTComCam Data Preview 1 ECDFS}",
-     keywords = {79},
-         year = 2025,
-        month = jan,
-        pages = {33},
-          doi = {10.71929/RUBIN/2570850},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...33A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@MISC{sitcom-163,
-       author = {{Adari}, Prakruth and {von der Linden}, Anja},
-        title = "{SITCOMTN-163: Source Selection for Abell 360 in LSSTComCam Data Preview 1}",
-     keywords = {79},
-         year = 2025,
-        month = jan,
-        pages = {34},
-          doi = {10.71929/RUBIN/2571157},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...34A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@article{Adari:2024vkf,
-    author = "Adari, Prakruth and Slosar, An{\v{z}}e",
-    title = "{Searching for parity violation in SDSS DR16 Lyman-{\ensuremath{\alpha}} forest data}",
-    eprint = "2405.04660",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.110.103534",
-    journal = "Phys. Rev. D",
-    volume = "110",
-    number = "10",
-    pages = "103534",
-    year = "2024"
-}
-
-
-@article{Adari:2021iye,
-    author = "Adari, Prakruth and Slosar, An{\v{z}}e",
-    title = "{Generalized redundant calibration of radio interferometers}",
-    eprint = "2107.10186",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.IM",
-    doi = "10.1103/PhysRevD.106.043006",
-    journal = "Phys. Rev. D",
-    volume = "106",
-    number = "4",
-    pages = "043006",
-    year = "2022"
-}
-
-@ARTICLE{dp1pz,
-       author = {{Zhang}, T. and {Charles}, E. and {Crenshaw}, J.~F. and {Schmidt}, S.~J. and {Adari}, P. and {Gschwend}, J. and {Mau}, S. and {Andrews}, B. and {Aubourg}, E. and {Bains}, Y. and {Bechtol}, K. and {Boucaud}, A. and {Boutigny}, D. and {Burchat}, P. and {Chevalier}, J. and {Chiang}, J. and {Chiang}, H. -F. and {Clowe}, D. and {Cohen-Tanugi}, J. and {Combet}, C. and {Connolly}, A. and {Dagoret-Campagne}, S. and {Daly}, P.~N. and {Daruich}, F. and {Daubard}, G. and {De Vicente}, J. and {Drass}, H. and {Fanning}, K. and {Gawiser}, E. and {Graham}, M. and {Guy}, L.~P. and {Hang}, Q. and {Ingraham}, P. and {Ilbert}, O. and {Jarvis}, M. and {Jee}, M.~J. and {Jenness}, T. and {Johnson}, A. and {Juramy-Gilles}, C. and {Kahn}, S.~M. and {Kalmbach}, J.~B. and {Kang}, Y. and {Kannawadi}, A. and {Kelvin}, L.~S. and {Liang}, S. and {Lynn}, O. and {Lust}, N.~B. and {Lutfi}, M. and {Malz}, A. and {Mandelbaum}, R. and {Marshall}, S. and {Meyers}, J. and {Migliore}, M. and {Moniez}, M. and {Neveu}, J. and {Newman}, J.~A. and {Nourbakhsh}, E. and {Oldag}, D. and {Park}, H. and {Pelesky}, S. and {Plazas Malag{\'o}n}, A.~A. and {Quint}, B. and {Rahman}, M. and {Rasmussen}, A. and {Reil}, K. and {Roby}, W. and {Roodman}, A. and {Roucelle}, C. and {Salvato}, M. and {S{\'a}nchez}, B. and {Sanmartim}, D. and {Schindler}, R.~H. and {Scora}, J. and {Sebag}, J. and {Sedaghat}, N. and {Sevilla-Noarbe}, I. and {Shirley}, R. and {Shugart}, A. and {Solomon}, R. and {Taranu}, D. and {Thayer}, G. and {Toribio San Cipriano}, L. and {Urbach}, E. and {Utsumi}, Y. and {van Reeven}, W. and {von der Linden}, A. and {Walter}, C.~W. and {Wood-Vasey}, W.~M. and {Zuntz}, J. and {LSST Dark Energy Science Collaboration}},
-        title = "{Photometric Redshift Estimation for Rubin Observatory Data Preview 1 with Redshift Assessment Infrastructure Layers (RAIL)}",
-      journal = {arXiv e-prints},
-     keywords = {Instrumentation and Methods for Astrophysics, Astrophysics of Galaxies},
-         year = 2025,
-        month = oct,
-          eid = {arXiv:2510.07370},
-        pages = {arXiv:2510.07370},
-          doi = {10.48550/arXiv.2510.07370},
-archivePrefix = {arXiv},
-       eprint = {2510.07370},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251007370Z},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@article{LSSTDarkEnergyScience:2024djw,
-    author = "Mendoza, Ismael and others",
-    collaboration = "LSST Dark Energy Science",
-    title = "{The Blending ToolKit: A simulation framework for evaluation of galaxy detection and deblending}",
-    eprint = "2409.06986",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.IM",
-    doi = "10.33232/001c.129699",
-    journal = "Open J. Astrophys.",
-    volume = "8",
-    pages = "001c.129699",
-    year = "2025"
-}
-
-@MISC{sitcom-154,
-       author = {{Charles}, Eric and {Crenshaw}, John Franklin and {Zhang}, Tianqing and {Schmidt}, Samuel and {Adari}, Prakruth and {Cohen-Tanugi}, Johann and {Graham}, Melissa L. and {Gschwend}, Julia and {Kalmbach}, J. Bryce and {Kannawadi}, Arun and {Malz}, Alex I. and {Mau}, Sidney and {Sevilla-Noarbe}, Ignacio and {Solomon}, Rance and {Taranu}, Dan S.},
-        title = "{SITCOMTN-154: Initial studies of photometric redshifts with LSSTComCam from DP1}",
-     keywords = {79},
-         year = 2025,
-        month = jan,
-        pages = {35},
-          doi = {10.71929/RUBIN/2571480},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...35C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-
-@MISC{rtn-095,
-       author = {{NSF-DOE Vera C. Rubin Observatory Team} and {Acero-Cuellar}, Tatiana and {Acosta}, Emily and {Adair}, Christina L. and {Adari}, Prakruth and {Adelman-McCarthy}, Jennifer K. and {Alexov}, Anastasia and {Allbery}, Russ and {Allsman}, Robyn and {AlSayyad}, Yusra and {Amado}, Jhonatan and {Amouroux}, Nathan and {Antilogus}, Pierre and {Aracena Alcayaga}, Alexis and {Aravena-Rojas}, Gonzalo and {Araya Cortes}, Claudio H. and {Aubourg}, {\'E}ric and {Axelrod}, Tim S. and {Banovetz}, John and {Barr{\'\i}a}, Carlos and {Bauer}, Amanda E. and {Bauman}, Brian J. and {Bechtol}, Ellen and {Bechtol}, Keith and {Becker}, Andrew C. and {Becker}, Valerie R. and {Beckett}, Mark G. and {Bellm}, Eric C. and {Bernardinelli}, Pedro H. and {Bianco}, Federica B. and {Blum}, Robert D. and {Bogart}, Joanne and {Bolton}, Adam and {Booth}, Michael T. and {Bosch}, James F. and {Boucaud}, Alexandre and {Boutigny}, Dominique and {Bovill}, Robert A. and {Bradshaw}, Andrew and {Bregeon}, Johan and {Brescia}, Massimo and {Brondel}, Brian J. and {Broughton}, Alex and {Budlong}, Audrey and {Buffat}, Dimitri and {Calabrese}, Daniel and {Canestrari}, Rodolfo and {Caplar}, Neven and {Carlin}, Jeffrey L. and {Ceballo}, Ross and {Chandler}, Colin Orion and {Chang}, Chihway and {Charles-Emerson}, Glenaver and {Chiang}, Hsin-Fang and {Chiang}, James and {Choi}, Yumi and {Christensen}, Eric J. and {Claver}, Charles F. and {Clements}, Andy W. and {Cockrum}, Joseph J. and {Cohen-Tanugi}, Johann and {Colleoni}, Franco and {Combet}, C{\'e}line and {Connolly}, Andrew J. and {Constanzo C{\'o}rdova}, Julio Eduardo and {Contreras}, Hans E. and {Crenshaw}, John Franklin and {Dagoret-Campagne}, Sylvie and {Daniel}, Scott F. and {Daruich}, Felipe and {Daubard}, Guillaume and {Daues}, Greg and {Dennihy}, Erik and {Deppe}, Stephanie J.~H. and {Digel}, Seth W. and {Doherty}, Peter E. and {Drlica-Wagner}, Alex and {Dubois-Felsmann}, Gregory P. and {Economou}, Frossie and {Eiger}, Orion and {Eisert}, Lukas and {Eisner}, Alan M. and {Englert}, Anthony and {Erb}, Baden and {Fabrega}, Juan A. and {Fagrelius}, Parker and {Fanning}, Kevin and {Fausti Neto}, Angelo and {Ferguson}, Peter S. and {Fert{\'e}}, Agn{\`e}s and {Fisher-Levine}, Merlin and {Fonseca Alvarez}, Gloria and {Foss}, Michael D. and {Fouchez}, Dominique and {Fuchs}, Dan C. and {Gangler}, Emmanuel and {Gaponenko}, Igor and {Garcia}, Julen and {Gates}, John H. and {Gill}, Ranpal K. and {Giro}, Enrico and {Glanzman}, Thomas and {Godoy}, Robinson and {Goodenow}, Iain and {Gorsuch}, Miranda R. and {Gower}, Michelle and {Granvik}, Mikael and {Greenstreet}, Sarah and {Guan}, Wen and {Guillemin}, Thibault and {Guy}, Leanne P. and {Hascall}, Diane and {Hascall}, Patrick A. and {Heinze}, Aren Nathaniel and {Hernandez}, Fabio and {Herner}, Kenneth and {Herrold}, Ardis and {Higgs}, Clare R. and {Hoblitt}, Joshua and {Howard}, Erin Leigh and {Hyun}, Minhee and {Ingraham}, Patrick and {Irving}, David H. and {Ivezi{\'c}}, {\v{Z}}eljko and {Jacoby}, Suzanne H. and {Jannuzi}, Buell T. and {Jarugula}, Sreevani and {Jee}, M. James and {Jenness}, Tim and {Jennings}, Toby C. and {Jeremie}, Andrea and {Jernigan}, Garrett and {Jim{\'e}nez Mej{\'\i}as}, David and {Johnson}, Anthony S. and {Jones}, R. Lynne and {Jones}, Roger William Lewis and {Juramy-Gilles}, Claire and {Juri{\'c}}, Mario and {Kahn}, Steven M. and {Kalmbach}, J. Bryce and {Kang}, Yijung and {Kannawadi}, Arun and {Kantor}, Jeffrey P. and {Karavakis}, Edward and {Kelkar}, Kshitija and {Kelvin}, Lee S. and {Kotov}, Ivan V. and {Kov{\'a}cs}, G{\'a}bor and {Kowalik}, Mikolaj and {Krabbendam}, Victor L. and {Krughoff}, K. Simon and {Kub{\'a}nek}, Petr and {Kurlander}, Jacob A. and {Kusulja}, Mile and {Lage}, Craig S. and {Lago}, Paulo J.~A. and {Laliotis}, Katherine and {Lange}, Travis and {Laporte}, Didier and {Lau}, Ryan M. and {Lazarte}, Juan Carlos and {Le Boulc'h}, Quentin and {L{\'e}get}, Pierre-Fran{\c{c}}ois and {Le Guillou}, Laurent and {Levine}, Benjamin and {Liang}, Ming and {Liang}, Shuang and {Lim}, Kian-Tat and {von der Linden}, Anja and {Lin}, Huan and {Lopez}, Margaux and {Lopez Toro}, Juan J. and {Love}, Peter and {Lupton}, Robert H. and {Lust}, Nate B. and {MacArthur}, Lauren A. and {MacBride}, Sean Patrick and {Madejski}, Greg M. and {Mainetti}, Gabriele and {Margheim}, Steven J. and {Markiewicz}, Thomas W. and {Marshall}, Phil and {Marshall}, Stuart and {Maulen}, Guido and {May}, Morgan and {McCormick}, Jeremy and {McKay}, David and {McKercher}, Robert and {Megias Homar}, Guillem and {Meisner}, Aaron M. and {Menanteau}, Felipe and {Mentzer}, Heather R. and {Metzger}, Kristen and {Meyers}, Joshua E. and {Miller}, Michelle and {Mills}, David J. and {Moeyens}, Joachim and {Moniez}, Marc and {Moolekamp}, Fred E. and {Morales Mar{\'\i}n}, C.~A.~L.},
-        title = "{RTN-095: The Vera C. Rubin Observatory Data Preview 1}",
-     keywords = {79 ASTRONOMY AND ASTROPHYSICS},
-         year = 2025,
-        month = jan,
-        pages = {31},
-          doi = {10.71929/RUBIN/2570536},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...31N},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-
-
-
-@article{SENSEI:2023zdf,
-    author = "Adari, Prakruth and others",
-    collaboration = "SENSEI",
-    title = "{First Direct-Detection Results on Sub-GeV Dark Matter Using the SENSEI Detector at SNOLAB}",
-    eprint = "2312.13342",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    reportNumber = "YITP-SB-2023-30, FERMILAB-PUB-23-0824-CSAID-PPD",
-    doi = "10.1103/PhysRevLett.134.011804",
-    journal = "Phys. Rev. Lett.",
-    volume = "134",
-    number = "1",
-    pages = "011804",
-    year = "2025"
-}
-
-@article{Adari:2021qmx,
-    author = "Adari, Prakruth and Berens, Roman and Levin, Janna",
-    title = "{Charging up boosted black holes}",
-    eprint = "2111.15027",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    doi = "10.1103/PhysRevD.107.044055",
-    journal = "Phys. Rev. D",
-    volume = "107",
-    number = "4",
-    pages = "044055",
-    year = "2023"
-}
-
-@ARTICLE{2022arXiv220205097A,
-       author = {{Adari}, P. and {Aguilar-Arevalo}, A. and {Amidei}, D. and {Angloher}, G. and {Armengaud}, E. and {Augier}, C. and {Balogh}, L. and {Banik}, S. and {Baxter}, D. and {Beaufort}, C. and {Beaulieu}, G. and {Belov}, V. and {Ben Gal}, Y. and {Benato}, G. and {Beno{\^\i}t}, A. and {Bento}, A. and {Berg{\'e}}, L. and {Bertolini}, A. and {Bhattacharyya}, R. and {Billard}, J. and {Bloch}, I.~M. and {Botti}, A. and {Breier}, R. and {Bres}, G. and {Bret}, J-. L. and {Broniatowski}, A. and {Brossard}, A. and {Bucci}, C. and {Bunker}, R. and {Cababie}, M. and {Calvo}, M. and {Camus}, P. and {Cancelo}, G. and {Canonica}, L. and {Cappella}, F. and {Cardani}, L. and {Caron}, J. -F. and {Casali}, N. and {del Castello}, G. and {Cazes}, A. and {Cerulli}, R. and {Cervantes Vergara}, B.~A. and {Chaize}, D. and {Chapellier}, M. and {Chaplinsky}, L. and {Charlieux}, F. and {Chaudhuri}, M. and {Chavarria}, A.~E. and {Chemin}, G. and {Chen}, R. and {Chen}, H. and {Chierchie}, F. and {Colantoni}, I. and {Colas}, J. and {Cooley}, J. and {Coquillat}, J. -M. and {Corcoran}, E.~C. and {Crawford}, S. and {Crisler}, M. and {Cruciani}, A. and {Cushman}, P. and {D'Addabbo}, A. and {D'Olivo}, J.~C. and {Dastgheibi-Fard}, A. and {De J{\'e}sus}, M. and {Deng}, Y. and {Dent}, J.~B. and {Depaoli}, E.~L. and {Dering}, K. and {Dharani}, S. and {Di Lorenzo}, S. and {Drlica-Wagner}, A. and {Dumoulin}, L. and {Durnford}, D. and {Dutta}, B. and {Einfalt}, L. and {Erb}, A. and {Erhart}, A. and {Essig}, R. and {Estrada}, J. and {Etzion}, E. and {Exshaw}, O. and {Favela-Perez}, F. and {Feilitzsch}, F. v. and {Fernandez Moroni}, G. and {Ferreiro Iachellini}, N. and {Ferriol}, S. and {Fichtinger}, S. and {Figueroa-Feliciano}, E. and {Filippini}, J. -B. and {Filosofov}, D. and {Formaggio}, J.~A. and {Friedl}, M. and {Fuard}, S. and {Fuchs}, D. and {Fuss}, A. and {Ga{\"\i}or}, R. and {Garai}, A. and {Garrah}, C. and {Gascon}, J. and {Gerbier}, G. and {Ghaith}, M. and {Ghete}, V.~M. and {Gift}, D. and {Giomataris}, I. and {Giroux}, G. and {Giuliani}, A. and {Gorel}, P. and {Gorla}, P. and {Goupy}, C. and {Goupy}, J. and {Goy}, C. and {Gros}, M. and {Gros}, P. and {Guardincerri}, Y. and {Guerin}, C. and {Guidi}, V. and {Guillaudin}, O. and {Gupta}, S. and {Guy}, E. and {Harrington}, P. and {Hauff}, D. and {Heine}, S.~T. and {Hertel}, S.~A. and {Holland}, S.~E. and {Hong}, Z. and {Hoppe}, E.~W. and {Hossbach}, T.~W. and {Ianigro}, J. -C. and {Iyer}, V. and {Jastram}, A. and {Je{\v{s}}kovsk{\'y}}, M. and {Jin}, Y. and {Jochum}, J. and {Johnston}, J.~P. and {Juillard}, A. and {Karaivanov}, D. and {Kashyap}, V. and {Katsioulas}, I. and {Kazarcev}, S. and {Kaznacheeva}, M. and {Kelly}, F. and {Kilminster}, B. and {Kinast}, A. and {Klinkenberg}, L. and {Kluck}, H. and {Knights}, P. and {Korn}, Y. and {Kraus}, H. and {von Krosigk}, B. and {Kubik}, A. and {Kurinsky}, N.~A. and {Lamblin}, J. and {Langenk{\"a}mper}, A. and {Langrock}, S. and {Lasserre}, T. and {Lattaud}, H. and {Lautridou}, P. and {Lawson}, I. and {Lee}, S.~J. and {Lee}, M. and {Letessier-Selvon}, A. and {Lhuillier}, D. and {Li}, M. and {Lin}, Y. -T. and {Lubashevskiy}, A. and {Mahapatra}, R. and {Maludze}, S. and {Mancuso}, M. and {Manthos}, I. and {Marini}, L. and {Marnieros}, S. and {Martin}, R.~D. and {Matalon}, A. and {Matthews}, J. and {Mauri}, B. and {Mayer}, D.~W. and {Mazzolari}, A. and {Mazzucato}, E. and {Theenhausen}, H. Meyer zu and {Michielin}, E. and {Minet}, J. and {Mirabolfathi}, N. and {Mirbach}, K. v. and {Misiak}, D. and {Mitra}, P. and {Mocellin}, J-. L. and {Mohanty}, B. and {Mokina}, V. and {Mols}, J. -P. and {Monfardini}, A. and {Mounier}, F. and {Munagavalasa}, S. and {Muraz}, J. -F. and {Navick}, X. -F. and {Neep}, T. and {Neog}, H. and {Neyrial}, H. and {Nikolopoulos}, K. and {Nilima}, A.},
-        title = "{EXCESS workshop: Descriptions of rising low-energy spectra}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Instrumentation and Detectors},
-         year = 2022,
-        month = feb,
-          eid = {arXiv:2202.05097},
-        pages = {arXiv:2202.05097},
-          doi = {10.48550/arXiv.2202.05097},
-archivePrefix = {arXiv},
-       eprint = {2202.05097},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220205097A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+% @misc{a360,
+%        author = "{{von der Linden}, Anja} and others",
+%         title = "A Rubin view of Abell 360",
+%          year = "2025, in prep."
+% }
+% 
+% 
+% @MISC{sitcom-128,
+%        author = {{Adari}, Prakruth and {von der Linden}, Anja},
+%         title = "{SITCOMTN-128: Unrecognized Blends in LSSTComCam Data Preview 1 ECDFS}",
+%      keywords = {79},
+%          year = 2025,
+%         month = jan,
+%         pages = {33},
+%           doi = {10.71929/RUBIN/2570850},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...33A},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
+% 
+% @MISC{sitcom-163,
+%        author = {{Adari}, Prakruth and {von der Linden}, Anja},
+%         title = "{SITCOMTN-163: Source Selection for Abell 360 in LSSTComCam Data Preview 1}",
+%      keywords = {79},
+%          year = 2025,
+%         month = jan,
+%         pages = {34},
+%           doi = {10.71929/RUBIN/2571157},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...34A},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
+% 
+% @article{Adari:2024vkf,
+%     author = "Adari, Prakruth and Slosar, An{\v{z}}e",
+%     title = "{Searching for parity violation in SDSS DR16 Lyman-{\ensuremath{\alpha}} forest data}",
+%     eprint = "2405.04660",
+%     archivePrefix = "arXiv",
+%     primaryClass = "astro-ph.CO",
+%     doi = "10.1103/PhysRevD.110.103534",
+%     journal = "Phys. Rev. D",
+%     volume = "110",
+%     number = "10",
+%     pages = "103534",
+%     year = "2024"
+% }
+% 
+% 
+% @article{Adari:2021iye,
+%     author = "Adari, Prakruth and Slosar, An{\v{z}}e",
+%     title = "{Generalized redundant calibration of radio interferometers}",
+%     eprint = "2107.10186",
+%     archivePrefix = "arXiv",
+%     primaryClass = "astro-ph.IM",
+%     doi = "10.1103/PhysRevD.106.043006",
+%     journal = "Phys. Rev. D",
+%     volume = "106",
+%     number = "4",
+%     pages = "043006",
+%     year = "2022"
+% }
+% 
+% @ARTICLE{dp1pz,
+%        author = {{Zhang}, T. and {Charles}, E. and {Crenshaw}, J.~F. and {Schmidt}, S.~J. and {Adari}, P. and {Gschwend}, J. and {Mau}, S. and {Andrews}, B. and {Aubourg}, E. and {Bains}, Y. and {Bechtol}, K. and {Boucaud}, A. and {Boutigny}, D. and {Burchat}, P. and {Chevalier}, J. and {Chiang}, J. and {Chiang}, H. -F. and {Clowe}, D. and {Cohen-Tanugi}, J. and {Combet}, C. and {Connolly}, A. and {Dagoret-Campagne}, S. and {Daly}, P.~N. and {Daruich}, F. and {Daubard}, G. and {De Vicente}, J. and {Drass}, H. and {Fanning}, K. and {Gawiser}, E. and {Graham}, M. and {Guy}, L.~P. and {Hang}, Q. and {Ingraham}, P. and {Ilbert}, O. and {Jarvis}, M. and {Jee}, M.~J. and {Jenness}, T. and {Johnson}, A. and {Juramy-Gilles}, C. and {Kahn}, S.~M. and {Kalmbach}, J.~B. and {Kang}, Y. and {Kannawadi}, A. and {Kelvin}, L.~S. and {Liang}, S. and {Lynn}, O. and {Lust}, N.~B. and {Lutfi}, M. and {Malz}, A. and {Mandelbaum}, R. and {Marshall}, S. and {Meyers}, J. and {Migliore}, M. and {Moniez}, M. and {Neveu}, J. and {Newman}, J.~A. and {Nourbakhsh}, E. and {Oldag}, D. and {Park}, H. and {Pelesky}, S. and {Plazas Malag{\'o}n}, A.~A. and {Quint}, B. and {Rahman}, M. and {Rasmussen}, A. and {Reil}, K. and {Roby}, W. and {Roodman}, A. and {Roucelle}, C. and {Salvato}, M. and {S{\'a}nchez}, B. and {Sanmartim}, D. and {Schindler}, R.~H. and {Scora}, J. and {Sebag}, J. and {Sedaghat}, N. and {Sevilla-Noarbe}, I. and {Shirley}, R. and {Shugart}, A. and {Solomon}, R. and {Taranu}, D. and {Thayer}, G. and {Toribio San Cipriano}, L. and {Urbach}, E. and {Utsumi}, Y. and {van Reeven}, W. and {von der Linden}, A. and {Walter}, C.~W. and {Wood-Vasey}, W.~M. and {Zuntz}, J. and {LSST Dark Energy Science Collaboration}},
+%         title = "{Photometric Redshift Estimation for Rubin Observatory Data Preview 1 with Redshift Assessment Infrastructure Layers (RAIL)}",
+%       journal = {arXiv e-prints},
+%      keywords = {Instrumentation and Methods for Astrophysics, Astrophysics of Galaxies},
+%          year = 2025,
+%         month = oct,
+%           eid = {arXiv:2510.07370},
+%         pages = {arXiv:2510.07370},
+%           doi = {10.48550/arXiv.2510.07370},
+% archivePrefix = {arXiv},
+%        eprint = {2510.07370},
+%  primaryClass = {astro-ph.IM},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251007370Z},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
+% 
+% 
+% @article{LSSTDarkEnergyScience:2024djw,
+%     author = "Mendoza, Ismael and others",
+%     collaboration = "LSST Dark Energy Science",
+%     title = "{The Blending ToolKit: A simulation framework for evaluation of galaxy detection and deblending}",
+%     eprint = "2409.06986",
+%     archivePrefix = "arXiv",
+%     primaryClass = "astro-ph.IM",
+%     doi = "10.33232/001c.129699",
+%     journal = "Open J. Astrophys.",
+%     volume = "8",
+%     pages = "001c.129699",
+%     year = "2025"
+% }
+% 
+% @MISC{sitcom-154,
+%        author = {{Charles}, Eric and {Crenshaw}, John Franklin and {Zhang}, Tianqing and {Schmidt}, Samuel and {Adari}, Prakruth and {Cohen-Tanugi}, Johann and {Graham}, Melissa L. and {Gschwend}, Julia and {Kalmbach}, J. Bryce and {Kannawadi}, Arun and {Malz}, Alex I. and {Mau}, Sidney and {Sevilla-Noarbe}, Ignacio and {Solomon}, Rance and {Taranu}, Dan S.},
+%         title = "{SITCOMTN-154: Initial studies of photometric redshifts with LSSTComCam from DP1}",
+%      keywords = {79},
+%          year = 2025,
+%         month = jan,
+%         pages = {35},
+%           doi = {10.71929/RUBIN/2571480},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...35C},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
+% 
+% 
+% 
+% @MISC{rtn-095,
+%        author = {{NSF-DOE Vera C. Rubin Observatory Team} and {Acero-Cuellar}, Tatiana and {Acosta}, Emily and {Adair}, Christina L. and {Adari}, Prakruth and {Adelman-McCarthy}, Jennifer K. and {Alexov}, Anastasia and {Allbery}, Russ and {Allsman}, Robyn and {AlSayyad}, Yusra and {Amado}, Jhonatan and {Amouroux}, Nathan and {Antilogus}, Pierre and {Aracena Alcayaga}, Alexis and {Aravena-Rojas}, Gonzalo and {Araya Cortes}, Claudio H. and {Aubourg}, {\'E}ric and {Axelrod}, Tim S. and {Banovetz}, John and {Barr{\'\i}a}, Carlos and {Bauer}, Amanda E. and {Bauman}, Brian J. and {Bechtol}, Ellen and {Bechtol}, Keith and {Becker}, Andrew C. and {Becker}, Valerie R. and {Beckett}, Mark G. and {Bellm}, Eric C. and {Bernardinelli}, Pedro H. and {Bianco}, Federica B. and {Blum}, Robert D. and {Bogart}, Joanne and {Bolton}, Adam and {Booth}, Michael T. and {Bosch}, James F. and {Boucaud}, Alexandre and {Boutigny}, Dominique and {Bovill}, Robert A. and {Bradshaw}, Andrew and {Bregeon}, Johan and {Brescia}, Massimo and {Brondel}, Brian J. and {Broughton}, Alex and {Budlong}, Audrey and {Buffat}, Dimitri and {Calabrese}, Daniel and {Canestrari}, Rodolfo and {Caplar}, Neven and {Carlin}, Jeffrey L. and {Ceballo}, Ross and {Chandler}, Colin Orion and {Chang}, Chihway and {Charles-Emerson}, Glenaver and {Chiang}, Hsin-Fang and {Chiang}, James and {Choi}, Yumi and {Christensen}, Eric J. and {Claver}, Charles F. and {Clements}, Andy W. and {Cockrum}, Joseph J. and {Cohen-Tanugi}, Johann and {Colleoni}, Franco and {Combet}, C{\'e}line and {Connolly}, Andrew J. and {Constanzo C{\'o}rdova}, Julio Eduardo and {Contreras}, Hans E. and {Crenshaw}, John Franklin and {Dagoret-Campagne}, Sylvie and {Daniel}, Scott F. and {Daruich}, Felipe and {Daubard}, Guillaume and {Daues}, Greg and {Dennihy}, Erik and {Deppe}, Stephanie J.~H. and {Digel}, Seth W. and {Doherty}, Peter E. and {Drlica-Wagner}, Alex and {Dubois-Felsmann}, Gregory P. and {Economou}, Frossie and {Eiger}, Orion and {Eisert}, Lukas and {Eisner}, Alan M. and {Englert}, Anthony and {Erb}, Baden and {Fabrega}, Juan A. and {Fagrelius}, Parker and {Fanning}, Kevin and {Fausti Neto}, Angelo and {Ferguson}, Peter S. and {Fert{\'e}}, Agn{\`e}s and {Fisher-Levine}, Merlin and {Fonseca Alvarez}, Gloria and {Foss}, Michael D. and {Fouchez}, Dominique and {Fuchs}, Dan C. and {Gangler}, Emmanuel and {Gaponenko}, Igor and {Garcia}, Julen and {Gates}, John H. and {Gill}, Ranpal K. and {Giro}, Enrico and {Glanzman}, Thomas and {Godoy}, Robinson and {Goodenow}, Iain and {Gorsuch}, Miranda R. and {Gower}, Michelle and {Granvik}, Mikael and {Greenstreet}, Sarah and {Guan}, Wen and {Guillemin}, Thibault and {Guy}, Leanne P. and {Hascall}, Diane and {Hascall}, Patrick A. and {Heinze}, Aren Nathaniel and {Hernandez}, Fabio and {Herner}, Kenneth and {Herrold}, Ardis and {Higgs}, Clare R. and {Hoblitt}, Joshua and {Howard}, Erin Leigh and {Hyun}, Minhee and {Ingraham}, Patrick and {Irving}, David H. and {Ivezi{\'c}}, {\v{Z}}eljko and {Jacoby}, Suzanne H. and {Jannuzi}, Buell T. and {Jarugula}, Sreevani and {Jee}, M. James and {Jenness}, Tim and {Jennings}, Toby C. and {Jeremie}, Andrea and {Jernigan}, Garrett and {Jim{\'e}nez Mej{\'\i}as}, David and {Johnson}, Anthony S. and {Jones}, R. Lynne and {Jones}, Roger William Lewis and {Juramy-Gilles}, Claire and {Juri{\'c}}, Mario and {Kahn}, Steven M. and {Kalmbach}, J. Bryce and {Kang}, Yijung and {Kannawadi}, Arun and {Kantor}, Jeffrey P. and {Karavakis}, Edward and {Kelkar}, Kshitija and {Kelvin}, Lee S. and {Kotov}, Ivan V. and {Kov{\'a}cs}, G{\'a}bor and {Kowalik}, Mikolaj and {Krabbendam}, Victor L. and {Krughoff}, K. Simon and {Kub{\'a}nek}, Petr and {Kurlander}, Jacob A. and {Kusulja}, Mile and {Lage}, Craig S. and {Lago}, Paulo J.~A. and {Laliotis}, Katherine and {Lange}, Travis and {Laporte}, Didier and {Lau}, Ryan M. and {Lazarte}, Juan Carlos and {Le Boulc'h}, Quentin and {L{\'e}get}, Pierre-Fran{\c{c}}ois and {Le Guillou}, Laurent and {Levine}, Benjamin and {Liang}, Ming and {Liang}, Shuang and {Lim}, Kian-Tat and {von der Linden}, Anja and {Lin}, Huan and {Lopez}, Margaux and {Lopez Toro}, Juan J. and {Love}, Peter and {Lupton}, Robert H. and {Lust}, Nate B. and {MacArthur}, Lauren A. and {MacBride}, Sean Patrick and {Madejski}, Greg M. and {Mainetti}, Gabriele and {Margheim}, Steven J. and {Markiewicz}, Thomas W. and {Marshall}, Phil and {Marshall}, Stuart and {Maulen}, Guido and {May}, Morgan and {McCormick}, Jeremy and {McKay}, David and {McKercher}, Robert and {Megias Homar}, Guillem and {Meisner}, Aaron M. and {Menanteau}, Felipe and {Mentzer}, Heather R. and {Metzger}, Kristen and {Meyers}, Joshua E. and {Miller}, Michelle and {Mills}, David J. and {Moeyens}, Joachim and {Moniez}, Marc and {Moolekamp}, Fred E. and {Morales Mar{\'\i}n}, C.~A.~L.},
+%         title = "{RTN-095: The Vera C. Rubin Observatory Data Preview 1}",
+%      keywords = {79 ASTRONOMY AND ASTROPHYSICS},
+%          year = 2025,
+%         month = jan,
+%         pages = {31},
+%           doi = {10.71929/RUBIN/2570536},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...31N},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
+% 
+% 
+% 
+% 
+% 
+% @article{SENSEI:2023zdf,
+%     author = "Adari, Prakruth and others",
+%     collaboration = "SENSEI",
+%     title = "{First Direct-Detection Results on Sub-GeV Dark Matter Using the SENSEI Detector at SNOLAB}",
+%     eprint = "2312.13342",
+%     archivePrefix = "arXiv",
+%     primaryClass = "astro-ph.CO",
+%     reportNumber = "YITP-SB-2023-30, FERMILAB-PUB-23-0824-CSAID-PPD",
+%     doi = "10.1103/PhysRevLett.134.011804",
+%     journal = "Phys. Rev. Lett.",
+%     volume = "134",
+%     number = "1",
+%     pages = "011804",
+%     year = "2025"
+% }
+% 
+% @article{Adari:2021qmx,
+%     author = "Adari, Prakruth and Berens, Roman and Levin, Janna",
+%     title = "{Charging up boosted black holes}",
+%     eprint = "2111.15027",
+%     archivePrefix = "arXiv",
+%     primaryClass = "gr-qc",
+%     doi = "10.1103/PhysRevD.107.044055",
+%     journal = "Phys. Rev. D",
+%     volume = "107",
+%     number = "4",
+%     pages = "044055",
+%     year = "2023"
+% }
+% 
+% @ARTICLE{2022arXiv220205097A,
+%        author = {{Adari}, P. and {Aguilar-Arevalo}, A. and {Amidei}, D. and {Angloher}, G. and {Armengaud}, E. and {Augier}, C. and {Balogh}, L. and {Banik}, S. and {Baxter}, D. and {Beaufort}, C. and {Beaulieu}, G. and {Belov}, V. and {Ben Gal}, Y. and {Benato}, G. and {Beno{\^\i}t}, A. and {Bento}, A. and {Berg{\'e}}, L. and {Bertolini}, A. and {Bhattacharyya}, R. and {Billard}, J. and {Bloch}, I.~M. and {Botti}, A. and {Breier}, R. and {Bres}, G. and {Bret}, J-. L. and {Broniatowski}, A. and {Brossard}, A. and {Bucci}, C. and {Bunker}, R. and {Cababie}, M. and {Calvo}, M. and {Camus}, P. and {Cancelo}, G. and {Canonica}, L. and {Cappella}, F. and {Cardani}, L. and {Caron}, J. -F. and {Casali}, N. and {del Castello}, G. and {Cazes}, A. and {Cerulli}, R. and {Cervantes Vergara}, B.~A. and {Chaize}, D. and {Chapellier}, M. and {Chaplinsky}, L. and {Charlieux}, F. and {Chaudhuri}, M. and {Chavarria}, A.~E. and {Chemin}, G. and {Chen}, R. and {Chen}, H. and {Chierchie}, F. and {Colantoni}, I. and {Colas}, J. and {Cooley}, J. and {Coquillat}, J. -M. and {Corcoran}, E.~C. and {Crawford}, S. and {Crisler}, M. and {Cruciani}, A. and {Cushman}, P. and {D'Addabbo}, A. and {D'Olivo}, J.~C. and {Dastgheibi-Fard}, A. and {De J{\'e}sus}, M. and {Deng}, Y. and {Dent}, J.~B. and {Depaoli}, E.~L. and {Dering}, K. and {Dharani}, S. and {Di Lorenzo}, S. and {Drlica-Wagner}, A. and {Dumoulin}, L. and {Durnford}, D. and {Dutta}, B. and {Einfalt}, L. and {Erb}, A. and {Erhart}, A. and {Essig}, R. and {Estrada}, J. and {Etzion}, E. and {Exshaw}, O. and {Favela-Perez}, F. and {Feilitzsch}, F. v. and {Fernandez Moroni}, G. and {Ferreiro Iachellini}, N. and {Ferriol}, S. and {Fichtinger}, S. and {Figueroa-Feliciano}, E. and {Filippini}, J. -B. and {Filosofov}, D. and {Formaggio}, J.~A. and {Friedl}, M. and {Fuard}, S. and {Fuchs}, D. and {Fuss}, A. and {Ga{\"\i}or}, R. and {Garai}, A. and {Garrah}, C. and {Gascon}, J. and {Gerbier}, G. and {Ghaith}, M. and {Ghete}, V.~M. and {Gift}, D. and {Giomataris}, I. and {Giroux}, G. and {Giuliani}, A. and {Gorel}, P. and {Gorla}, P. and {Goupy}, C. and {Goupy}, J. and {Goy}, C. and {Gros}, M. and {Gros}, P. and {Guardincerri}, Y. and {Guerin}, C. and {Guidi}, V. and {Guillaudin}, O. and {Gupta}, S. and {Guy}, E. and {Harrington}, P. and {Hauff}, D. and {Heine}, S.~T. and {Hertel}, S.~A. and {Holland}, S.~E. and {Hong}, Z. and {Hoppe}, E.~W. and {Hossbach}, T.~W. and {Ianigro}, J. -C. and {Iyer}, V. and {Jastram}, A. and {Je{\v{s}}kovsk{\'y}}, M. and {Jin}, Y. and {Jochum}, J. and {Johnston}, J.~P. and {Juillard}, A. and {Karaivanov}, D. and {Kashyap}, V. and {Katsioulas}, I. and {Kazarcev}, S. and {Kaznacheeva}, M. and {Kelly}, F. and {Kilminster}, B. and {Kinast}, A. and {Klinkenberg}, L. and {Kluck}, H. and {Knights}, P. and {Korn}, Y. and {Kraus}, H. and {von Krosigk}, B. and {Kubik}, A. and {Kurinsky}, N.~A. and {Lamblin}, J. and {Langenk{\"a}mper}, A. and {Langrock}, S. and {Lasserre}, T. and {Lattaud}, H. and {Lautridou}, P. and {Lawson}, I. and {Lee}, S.~J. and {Lee}, M. and {Letessier-Selvon}, A. and {Lhuillier}, D. and {Li}, M. and {Lin}, Y. -T. and {Lubashevskiy}, A. and {Mahapatra}, R. and {Maludze}, S. and {Mancuso}, M. and {Manthos}, I. and {Marini}, L. and {Marnieros}, S. and {Martin}, R.~D. and {Matalon}, A. and {Matthews}, J. and {Mauri}, B. and {Mayer}, D.~W. and {Mazzolari}, A. and {Mazzucato}, E. and {Theenhausen}, H. Meyer zu and {Michielin}, E. and {Minet}, J. and {Mirabolfathi}, N. and {Mirbach}, K. v. and {Misiak}, D. and {Mitra}, P. and {Mocellin}, J-. L. and {Mohanty}, B. and {Mokina}, V. and {Mols}, J. -P. and {Monfardini}, A. and {Mounier}, F. and {Munagavalasa}, S. and {Muraz}, J. -F. and {Navick}, X. -F. and {Neep}, T. and {Neog}, H. and {Neyrial}, H. and {Nikolopoulos}, K. and {Nilima}, A.},
+%         title = "{EXCESS workshop: Descriptions of rising low-energy spectra}",
+%       journal = {arXiv e-prints},
+%      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Instrumentation and Detectors},
+%          year = 2022,
+%         month = feb,
+%           eid = {arXiv:2202.05097},
+%         pages = {arXiv:2202.05097},
+%           doi = {10.48550/arXiv.2202.05097},
+% archivePrefix = {arXiv},
+%        eprint = {2202.05097},
+%  primaryClass = {astro-ph.IM},
+%        adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220205097A},
+%       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+% }
 
 
