--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,8 @@
 
 
 @article{Liang:2025dnl,
-    author = {{Liang}, Shuang and {Adari}, Prakruth and {von der Linden}, Anja},
-    title = "{Catalog-based detection of unrecognized blends in deep optical ground based imaging}",
+    title = {Catalog-based detection of unrecognized blends in deep optical ground based imaging},
+    author = {Liang, Shuang and Adari, Prakruth and {von der Linden}, Anja},
     eprint = "2503.16680",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.CO",
