--- a/_bibliography/all.bib
+++ b/_bibliography/all.bib
@@ -1,6 +1,3 @@
-@string{prd = {Phys. Rev. D}}
-@string{prl = {Phys. Rev. Letters}}
-
 @ARTICLE{2025arXiv251007370Z,
        author = {{Zhang}, T. and {Charles}, E. and {Crenshaw}, J.~F. and {Schmidt}, S.~J. and {Adari}, P. and {Gschwend}, J. and {Mau}, S. and {Andrews}, B. and {Aubourg}, E. and {Bains}, Y. and {Bechtol}, K. and {Boucaud}, A. and {Boutigny}, D. and {Burchat}, P. and {Chevalier}, J. and {Chiang}, J. and {Chiang}, H. -F. and {Clowe}, D. and {Cohen-Tanugi}, J. and {Combet}, C. and {Connolly}, A. and {Dagoret-Campagne}, S. and {Daly}, P.~N. and {Daruich}, F. and {Daubard}, G. and {De Vicente}, J. and {Drass}, H. and {Fanning}, K. and {Gawiser}, E. and {Graham}, M. and {Guy}, L.~P. and {Hang}, Q. and {Ingraham}, P. and {Ilbert}, O. and {Jarvis}, M. and {Jee}, M.~J. and {Jenness}, T. and {Johnson}, A. and {Juramy-Gilles}, C. and {Kahn}, S.~M. and {Kalmbach}, J.~B. and {Kang}, Y. and {Kannawadi}, A. and {Kelvin}, L.~S. and {Liang}, S. and {Lynn}, O. and {Lust}, N.~B. and {Lutfi}, M. and {Malz}, A. and {Mandelbaum}, R. and {Marshall}, S. and {Meyers}, J. and {Migliore}, M. and {Moniez}, M. and {Neveu}, J. and {Newman}, J.~A. and {Nourbakhsh}, E. and {Oldag}, D. and {Park}, H. and {Pelesky}, S. and {Plazas Malag{\'o}n}, A.~A. and {Quint}, B. and {Rahman}, M. and {Rasmussen}, A. and {Reil}, K. and {Roby}, W. and {Roodman}, A. and {Roucelle}, C. and {Salvato}, M. and {S{\'a}nchez}, B. and {Sanmartim}, D. and {Schindler}, R.~H. and {Scora}, J. and {Sebag}, J. and {Sedaghat}, N. and {Sevilla-Noarbe}, I. and {Shirley}, R. and {Shugart}, A. and {Solomon}, R. and {Taranu}, D. and {Thayer}, G. and {Toribio San Cipriano}, L. and {Urbach}, E. and {Utsumi}, Y. and {van Reeven}, W. and {von der Linden}, A. and {Walter}, C.~W. and {Wood-Vasey}, W.~M. and {Zuntz}, J. and {LSST Dark Energy Science Collaboration}},
         title = "{Photometric Redshift Estimation for Rubin Observatory Data Preview 1 with Redshift Assessment Infrastructure Layers (RAIL)}",
@@ -10,7 +7,6 @@
         month = oct,
           eid = {arXiv:2510.07370},
         pages = {arXiv:2510.07370},
-        arxiv = {2510.07370},
           doi = {10.48550/arXiv.2510.07370},
 archivePrefix = {arXiv},
        eprint = {2510.07370},
@@ -28,12 +24,10 @@ archivePrefix = {arXiv},
         month = mar,
           eid = {arXiv:2503.16680},
         pages = {arXiv:2503.16680},
-        arxiv = {2503.16680},
           doi = {10.48550/arXiv.2503.16680},
 archivePrefix = {arXiv},
        eprint = {2503.16680},
  primaryClass = {astro-ph.CO},
-     selected = {true},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250316680L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -50,7 +44,6 @@ archivePrefix = {arXiv},
           doi = {10.33232/001c.129699},
 archivePrefix = {arXiv},
        eprint = {2409.06986},
-       arxiv  = {2409.06986},
  primaryClass = {astro-ph.IM},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025OJAp....8E..14M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -75,7 +68,6 @@ archivePrefix = {arXiv},
          year = 2025,
         month = jan,
         pages = {34},
-     selected = {true},
           doi = {10.71929/RUBIN/2571157},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025rubn.rept...34A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -108,7 +100,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025PhRvL.134a1804A,
        author = {{Adari}, Prakruth and {Bloch}, Itay M. and {Botti}, Ana M. and {Cababie}, Mariano and {Cancelo}, Gustavo and {Cervantes-Vergara}, Brenda A. and {Crisler}, Michael and {Daal}, Miguel and {Desai}, Ansh and {Drlica-Wagner}, Alex and {Essig}, Rouven and {Estrada}, Juan and {Etzion}, Erez and {Moroni}, Guillermo Fernandez and {Holland}, Stephen E. and {Kehat}, Jonathan and {Korn}, Yaron and {Lawson}, Ian and {Luoma}, Steffon and {Orly}, Aviv and {Perez}, Santiago E. and {Rodrigues}, Dario and {Saffold}, Nathan A. and {Scorza}, Silvia and {Singal}, Aman and {Sofo-Haro}, Miguel and {Stefanazzi}, Leandro and {Stifter}, Kelly and {Tiffenberg}, Javier and {Uemura}, Sho and {Villalpando}, Edgar Marrufo and {Volansky}, Tomer and {Wu}, Yikai and {Yu}, Tien-Tien and {Sensei Collaboration} and {Emken}, Tim{\'o}n and {Xu}, Hailin},
         title = "{First Direct-Detection Results on Sub-GeV Dark Matter Using the SENSEI Detector at SNOLAB}",
-      journal = prl,
+      journal = {\prl},
      keywords = {Particles and Fields, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Experiment, High Energy Physics - Phenomenology, Physics - Instrumentation and Detectors},
          year = 2025,
         month = jan,
@@ -119,7 +111,6 @@ archivePrefix = {arXiv},
           doi = {10.1103/PhysRevLett.134.011804},
 archivePrefix = {arXiv},
        eprint = {2312.13342},
-        arxiv = {2312.13342},
  primaryClass = {astro-ph.CO},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025PhRvL.134a1804A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -134,7 +125,6 @@ archivePrefix = {arXiv},
           eid = {ascl:2412.021},
 archivePrefix = {ascl},
        eprint = {2412.021},
-        arxiv = {2412.021},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024ascl.soft12021M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -142,7 +132,7 @@ archivePrefix = {ascl},
 @ARTICLE{2024PhRvD.110j3534A,
        author = {{Adari}, Prakruth and {Slosar}, An{\v{z}}e},
         title = "{Searching for parity violation in SDSS DR16 Lyman-{\ensuremath{\alpha}} forest data}",
-      journal = prd,
+      journal = {\prd},
      keywords = {Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2024,
         month = nov,
@@ -151,10 +141,8 @@ archivePrefix = {ascl},
           eid = {103534},
         pages = {103534},
           doi = {10.1103/PhysRevD.110.103534},
-     selected = {true},
 archivePrefix = {arXiv},
        eprint = {2405.04660},
-        arxiv = {2405.04660},
  primaryClass = {astro-ph.CO},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024PhRvD.110j3534A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -163,7 +151,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023PhRvD.107d4055A,
        author = {{Adari}, Prakruth and {Berens}, Roman and {Levin}, Janna},
         title = "{Charging up boosted black holes}",
-      journal = prd,
+      journal = {\prd},
      keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Theory},
          year = 2023,
         month = feb,
@@ -174,16 +162,29 @@ archivePrefix = {arXiv},
           doi = {10.1103/PhysRevD.107.044055},
 archivePrefix = {arXiv},
        eprint = {2111.15027},
-        arxiv = {2111.15027},
  primaryClass = {gr-qc},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023PhRvD.107d4055A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2023APS..APRD12006U,
+       author = {{Uemura}, Sho and {Adari}, Prakruth and {Ben Gal}, Yonatan and {Bloch}, Itay and {Cababie}, Mariano and {Cancelo}, Gustavo and {Chierchie}, Fernando and {Essig}, Rouven and {Estrada}, Juan and {Etzion}, Erez and {Fernandez Moroni}, Guillermo and {Korn}, Yaron and {Orly}, Aviv and {Rodriguez}, Dario and {Saffold}, Nathan and {Singal}, Aman and {Sofo Haro}, Miguel and {Stefanazzi}, Leandro and {Tiffenberg}, Javier and {Barak}, Liron and {Stifter}, Kelly and {Volansky}, Tomer and {Yu}, Tien-Tien and {Martina Botti}, Ana and {Sensei Collaboration Team}},
+        title = "{Sub-GeV dark matter searches with SENSEI}",
+    booktitle = {APS April Meeting Abstracts},
+         year = 2023,
+       series = {APS Meeting Abstracts},
+       volume = {2023},
+        month = jan,
+          eid = {D12.006},
+        pages = {D12.006},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023APS..APRD12006U},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{2022PhRvD.106d3006A,
        author = {{Adari}, Prakruth and {Slosar}, An{\v{z}}e},
         title = "{Generalized redundant calibration of radio interferometers}",
-      journal = prd,
+      journal = {\prd},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2022,
         month = aug,
@@ -194,7 +195,6 @@ archivePrefix = {arXiv},
           doi = {10.1103/PhysRevD.106.043006},
 archivePrefix = {arXiv},
        eprint = {2107.10186},
-        arxiv = {2107.10186},
  primaryClass = {astro-ph.IM},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2022PhRvD.106d3006A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -212,7 +212,6 @@ archivePrefix = {arXiv},
           doi = {10.48550/arXiv.2202.05097},
 archivePrefix = {arXiv},
        eprint = {2202.05097},
-        arxiv = {2202.05097},
  primaryClass = {astro-ph.IM},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220205097A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
